# football-talent-value-forecast

./: .gitignore  README.md  pyproject.toml
artifacts/: optuna_xgb_study.json  xgb_feature_names.json
data/interim/: df_player_defense_2223.csv  df_player_defense_2324.csv  df_player_defense_2425.csv  df_player_gca_2223.csv  df_player_gca_2324.csv  df_player_gca_2425.csv  df_player_passing_2223.csv  df_player_passing_2324.csv  df_player_passing_2425.csv  df_player_passing_types_2223.csv  df_player_passing_types_2324.csv  df_player_passing_types_2425.csv  df_player_possession_2223.csv  df_player_possession_2324.csv  df_player_possession_2425.csv  df_player_shooting_2223.csv  df_player_shooting_2324.csv  df_player_shooting_2425.csv  df_player_stats_2223.csv  df_player_stats_2324.csv  df_player_stats_2425.csv  nationality_to_fifa_mapping.csv
data/raw/: dataset_transfermarkt_2025-06-15_15-34-31-954.json  df_player_defense_2425.csv  df_player_gca_2425.csv  df_player_passing_2425.csv  df_player_passing_types_2324.csv  valencia_cf_players_2020_2024.xlsx  valencia_market_value_22_25.csv
models/: xgb_market_value_next_season.pkl
notebooks/: 00_data_scraper.ipynb  00_data_scrapers.ipynb  01_data_description.ipynb  02_data_exploration.ipynb  03_data_cleaning.ipynb  03_fbref_data_cleaning_pipeline.ipynb  03_transfermarkt_scraper.ipynb  04_transfermarkt_data_cleaning_pipeline.ipynb  05_merge_player_data.ipynb  06_clean_merged_data.ipynb  07_xgboost_optimization.ipynb  data_scraper.ipynb
tests/: __init__.py  test_fbref_scraper.py  test_merge.py  test_transfermarkt_scraper.py
(+421 files in other folders)
