[project]
name = "talent-value-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "requests",
    "beautifulsoup4",
    "lxml",
    "ipykernel",
    "pip>=25.1.1",
    "html5lib>=1.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "fuzzywuzzy>=0.18.0",
    "openpyxl>=3.1.5",
    "pytest>=7.0.0",
    "selenium>=4.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
